Bug 348925: Transferred data column isn't updated when download finishes (xpfe patch).  Patch by Son Le <son.le0@gmail.com>, r=cbiesinger, sr=neil